:rotating_light: fix: resolve Code Smell: "Visible, non-interactive elements with click handlers must have at least one keyboard listener."

--- a/frontend/pratiler-frontend/src/assets/css/Global/HeaderGlobal.module.css
+++ b/frontend/pratiler-frontend/src/assets/css/Global/HeaderGlobal.module.css
@@ -50,7 +50,7 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  cursor: pointer;
+  text-decoration: none;
 }
 
 .icon {
